Fix question on firefox

--- a/css/app.css
+++ b/css/app.css
@@ -268,40 +268,23 @@ body{
     margin: 0;
 }
 #question-list .question img{
-    height: 100%;
+    width:225px;
+    height: 150px;
 }
-#question-list .question .flip-card-inner {     /* This container is needed to position the front and back side */
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-}
+
 
 #question-list .question.active .flip-card-inner{
     transform: rotateY(180deg);
 }
-#question-list .question .flip-card-front,
-#question-list .question .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
-    backface-visibility: hidden;
+
+#question-list .flip-card {
+    background-color: transparent;
+    width: 225px;
+    height: 150px;
+    perspective: 1000px;
 }
 
-/* Style the front side (fallback if image is missing) */
-#question-list .question .flip-card-back {
-    background-color: #bbb;
-    color: black;
-}
 
-/* Style the back side */
-#question-list .flip-card-front{
-    color: white;
-    transform: rotateY(180deg);
-}
 #question-list .question-row button{
     margin: 60px 0;
     white-space: nowrap;
